made it responsive for all screens

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Territory Wars - Turn-Based Strategy Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -112,8 +112,6 @@
         <p>
             Developed by
             <a href="https://github.com/dhairyajangir" target="_blank" rel="noopener noreferrer">Dhairya</a>,
-            <a href="https://github.com/Avishkar-s73" target="_blank" rel="noopener noreferrer">Avishkar</a>,
-            <a href="https://github.com/legit92" target="_blank" rel="noopener noreferrer">Nitin</a>.
         </p>
     </footer>
 
